<resources>
    <string name="modules">Modules</string>
    <string name="superuser">Superuser</string>
    <string name="logs">Logs</string>
    <string name="settings">Settings</string>
    <string name="install">Install</string>
    <string name="section_home">Home</string>
    <string name="section_theme">Themes</string>
    <string name="scroll_to_top">Scroll to top</string>
    <string name="module_search_hint">Search modules</string>
    <string name="denylist">DenyList</string>
    <string name="no_connection">No connection available</string>
    <string name="app_changelog">Changelog</string>
    <string name="loading">Loading…</string>
    <string name="update">Update</string>
    <string name="not_available">N/A</string>
    <string name="hide">Hide</string>
    <string name="home_package">Package</string>
    <string name="home_app_title">App</string>
    <string name="home_notice_content">Download SuperSU ONLY from the official GitHub page. Files from unknown sources can be malicious!</string>
    <string name="home_follow_title">Follow Us</string>
    <string name="home_item_source">Source</string>
    <string name="home_installed_version">Installed</string>
    <string name="home_latest_version">Latest</string>
    <string name="invalid_update_channel">Invalid update channel</string>
    <string name="uninstall_title">Uninstall SuperSU</string>
    <string name="uninstall_msg">All modules will be disabled/removed!\nRoot will be removed!\nAny internal storage unencrypted through the use of SuperSU will be re-encrypted!</string>
    <string name="keep_force_encryption">Preserve force encryption</string>
    <string name="keep_dm_verity">Preserve AVB 2.0/dm-verity</string>
    <string name="recovery_mode">Recovery mode</string>
    <string name="install_options_title">Options</string>
    <string name="install_method_title">Method</string>
    <string name="install_next">Next</string>
    <string name="install_start">Let\'s go</string>
    <string name="manager_download_install">Press to download and install</string>
    <string name="direct_install">Direct install (Recommended)</string>
    <string name="install_inactive_slot">Install to inactive slot (After OTA)</string>
    <string name="install_inactive_slot_msg">Your device will be FORCED to boot to the current inactive slot after a reboot!\nOnly use this option after OTA is done.\nContinue?</string>
    <string name="setup_title">Additional setup</string>
    <string name="select_patch_file">Select and patch a file</string>
    <string name="patch_file_msg">Select a raw image (*.img) or an ODIN tarfile (*.tar) or a payload.bin (*.bin)</string>
    <string name="reboot_delay_toast">Rebooting in 5 seconds…</string>
    <string name="flash_screen_title">Installation</string>
    <string name="su_request_title">Superuser request</string>
    <string name="touch_filtered_warning">Because an app is obscuring a Superuser request, SuperSU can\'t verify your response.</string>
    <string name="deny">0</string>
    <string name="prompt">Prompt</string>
    <string name="restrict">Restrict</string>
    <string name="grant">1</string>
    <string name="su_warning">Grants full access to your device.\nDeny if you\'re not sure!</string>
    <string name="forever">Forever</string>
    <string name="once">Once</string>
    <string name="tenmin">10 mins</string>
    <string name="twentymin">20 mins</string>
    <string name="thirtymin">30 mins</string>
    <string name="sixtymin">60 mins</string>
    <string name="su_allow_toast">%1$s was granted Superuser rights</string>
    <string name="su_deny_toast">%1$s was denied Superuser rights</string>
    <string name="su_snack_grant">Superuser rights of %1$s are granted</string>
    <string name="su_snack_deny">Superuser rights of %1$s are denied</string>
    <string name="su_snack_notif_on">Notifications of %1$s are enabled</string>
    <string name="su_snack_notif_off">Notifications of %1$s are disabled</string>
    <string name="su_snack_log_on">Logging of %1$s is enabled</string>
    <string name="su_snack_log_off">Logging of %1$s is disabled</string>
    <string name="su_revoke_title">Revoke?</string>
    <string name="su_revoke_msg">Confirm to revoke %1$s Superuser rights</string>
    <string name="toast">Toast</string>
    <string name="none">None</string>
    <string name="superuser_toggle_notification">Notifications</string>
    <string name="superuser_toggle_revoke">Revoke</string>
    <string name="superuser_policy_none">No apps have asked for Superuser permission yet.</string>
    <string name="log_data_none">You\'re log-free. Try using your root apps more.</string>
    <string name="log_data_daemon_none">SuperSU logs are empty, that\'s weird.</string>
    <string name="menu_save_log">Save log</string>
    <string name="menu_clear_log">Clear log now</string>
    <string name="logs_cleared">Log successfully cleared</string>
    <string name="pid">PID: %1$d</string>
    <string name="target_uid">Target UID: %1$d</string>
    <string name="target_pid">Target PID: %s</string>
    <string name="selinux_context">SELinux context: %s</string>
    <string name="supp_group">Supplementary group: %s</string>
    <string name="show_system_app">Show system apps</string>
    <string name="show_os_app">Show OS apps</string>
    <string name="hide_filter_hint">Filter by name</string>
    <string name="hide_search">Search</string>
    <string name="no_info_provided">(No info provided)</string>
    <string name="device_info_title">Device info</string>
    <string name="build_prop_title">Build prop</string>
    <string name="build_prop_unavailable">Build prop is unavailable</string>
    <string name="reboot_userspace">Soft reboot</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="reboot_download">Reboot to Download</string>
    <string name="reboot_edl">Reboot to EDL</string>
    <string name="reboot_safe_mode">Safe mode</string>
    <string name="module_version_author">%1$s by %2$s</string>
    <string name="module_state_remove">Remove</string>
    <string name="module_action">Action</string>
    <string name="module_state_restore">Restore</string>
    <string name="update_available">Update available</string>
    <string name="suspend_text_riru">Module suspended because %1$s is enabled</string>
    <string name="suspend_text_zygisk">Module suspended because %1$s isn\'t enabled</string>
    <string name="zygisk_module_unloaded">Zygisk module not loaded due to incompatibility</string>
    <string name="module_empty">No module installed</string>
    <string name="confirm_install">Install module %1$s?</string>
    <string name="confirm_install_title">Install confirmation</string>
    <string name="settings_dark_mode_title">Theme mode</string>
    <string name="settings_dark_mode_message">Select mode which best suits your style!</string>
    <string name="settings_dark_mode_light">Always light</string>
    <string name="settings_dark_mode_system">Follow system</string>
    <string name="settings_dark_mode_dark">Always dark</string>
    <string name="settings_theme_title">Theme</string>
    <string name="settings_theme_summary">Modify themes and colors</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_summary">Change the language of the app</string>
    <string name="settings_download_path_title">Download path</string>
    <string name="settings_download_path_message">Files will be saved to %1$s</string>
    <string name="system_default">(System default)</string>
    <string name="settings_update_stable">Stable</string>
    <string name="settings_update_beta">Beta</string>
    <string name="settings_update_debug">Debug</string>
    <string name="settings_update_custom">Custom</string>
    <string name="settings_doh_title">DNS over HTTPS</string>
    <string name="settings_doh_description">Resolve domain names securely over HTTPS</string>
    <string name="settings_hosts_title">Systemless hosts</string>
    <string name="settings_hosts_summary">Add systemless hosts module for ad-blocking apps</string>
    <string name="settings_hosts_toast">Added systemless hosts module</string>
    <string name="settings_zygisk_summary">Run parts of SuperSU in the Zygote daemon</string>
    <string name="settings_denylist_title">Enforce DenyList</string>
    <string name="settings_denylist_summary">Enforce DenyList to revoke root permissions for designated apps</string>
    <string name="settings_denylist_config_title">Configure DenyList</string>
    <string name="settings_denylist_config_summary">Configure apps and processes in the DenyList</string>
    <string name="settings_su_app_adb">Apps and ADB</string>
    <string name="settings_su_app">Apps only</string>
    <string name="settings_su_adb">ADB only</string>
    <string name="settings_su_disable">Disabled</string>
    <string name="settings_su_request_10">10 seconds</string>
    <string name="settings_su_request_15">15 seconds</string>
    <string name="settings_su_request_20">20 seconds</string>
    <string name="settings_su_request_30">30 seconds</string>
    <string name="settings_su_request_45">45 seconds</string>
    <string name="settings_su_request_60">60 seconds</string>
    <string name="superuser_access">Superuser access</string>
    <string name="auto_response">Automatic response</string>
    <string name="request_timeout">Request timeout</string>
    <string name="superuser_notification">Superuser notification</string>
    <string name="settings_su_reauth_title">Reauthenticate after upgrade</string>
    <string name="settings_su_reauth_summary">Reauthenticate Superuser access when an app is upgraded</string>
    <string name="settings_su_tapjack_title">Tapjacking protection</string>
    <string name="settings_su_tapjack_summary">Block Superuser dialog when touches are obscured</string>
    <string name="settings_su_auth_title">User authentication</string>
    <string name="settings_su_auth_summary">Require user authentication for Superuser requests</string>
    <string name="settings_su_auth_insecure">No authentication method is configured on the device</string>
    <string name="settings_su_restrict_title">Restrict root capabilities</string>
    <string name="settings_su_restrict_summary">Restrict root processes capabilities</string>
    <string name="multiuser_mode">Multiuser mode</string>
    <string name="settings_owner_only">Device owner only</string>
    <string name="settings_owner_manage">Device owner managed</string>
    <string name="settings_user_independent">User-independent</string>
    <string name="owner_only_summary">Only owner has root access</string>
    <string name="owner_manage_summary">Only owner can manage root access and receive request prompts</string>
    <string name="user_independent_summary">Each user has their own separate root rules</string>
    <string name="mount_namespace_mode">Mount namespace mode</string>
    <string name="settings_ns_global">Global namespace</string>
    <string name="settings_ns_requester">Inherit namespace</string>
    <string name="settings_ns_isolate">Isolated namespace</string>
    <string name="global_summary">All root sessions use the global mount namespace</string>
    <string name="requester_summary">Root sessions will inherit their requester\'s namespace</string>
    <string name="isolate_summary">Each root session will have its own isolated namespace</string>
    <string name="update_channel">SuperSU updates</string>
    <string name="progress_channel">Progress notifications</string>
    <string name="updated_channel">Update complete</string>
    <string name="download_complete">Download complete</string>
    <string name="download_file_error">Error downloading file</string>
    <string name="manager_update_title">SuperSU update available!</string>
    <string name="reboot">Reboot</string>
</resources>