<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ActionRebootNormal"
        android:title="@string/reboot" />

    <item
        android:id="@+id/ActionRebootUserspace"
        android:title="@string/reboot_userspace"
        android:visible="false" />

    <item
        android:id="@+id/ActionRebootRecovery"
        android:title="@string/reboot_recovery" />

    <item
        android:id="@+id/ActionRebootBootloader"
        android:title="@string/reboot_bootloader" />

    <item
        android:id="@+id/ActionRebootDownload"
        android:title="@string/reboot_download" />

    <item
        android:id="@+id/ActionRebootEdl"
        android:title="@string/reboot_edl" />

    <item
        android:id="@+id/ActionRebootSafeMode"
        android:checkable="true"
        android:title="@string/reboot_safe_mode" />

</menu>
