<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="su.android.ui.home.HomeViewModel.State" />

        <variable
            name="viewModel"
            type="su.android.ui.home.HomeViewModel" />

    </data>

    <com.google.android.material.card.MaterialCardView
        style="@style/WidgetFoundation.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/l1"
            android:paddingTop="@dimen/l_50"
            android:paddingEnd="@dimen/l1"
            android:paddingBottom="@dimen/l_50"
            tools:layout_gravity="center">

            <ImageView
                android:id="@+id/HomeManagerIcon"
                style="@style/WidgetFoundation.Icon.Primary"
                android:padding="@dimen/l_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/Manager" />

            <TextView
                android:id="@+id/HomeManagerTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/l1"
                android:text="@string/home_app_title"
                android:textAppearance="@style/AppearanceFoundation.Title"
                android:textColor="?colorPrimary"
                android:maxLines="1"
                android:ellipsize="end"
                app:layout_constraintBottom_toBottomOf="@+id/HomeManagerIcon"
                app:layout_constraintEnd_toStartOf="@+id/HomeManagerButton"
                app:layout_constraintStart_toEndOf="@+id/HomeManagerIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/home_app_title" />

            <FrameLayout
                android:id="@+id/HomeManagerButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="@+id/HomeManagerTitle"
                app:layout_constraintTop_toTopOf="@+id/HomeManagerTitle">

                <Button
                    style="@style/WidgetFoundation.Button"
                    gone="@{viewModel.appState != State.OUTDATED}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onManagerPressed()}"
                    android:text="@string/update"
                    android:textAllCaps="false"
                    android:layout_gravity="end"
                    app:icon="@drawable/Update" />

                <Button
                    style="@style/WidgetFoundation.Button.Text"
                    gone="@{viewModel.appState != State.UP_TO_DATE}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:onClick="@{() -> viewModel.onManagerPressed()}"
                    android:text="@string/install"
                    android:textAllCaps="false"
                    app:icon="@drawable/Install"/>

            </FrameLayout>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/HomeManagerTitleBarrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                app:referencedIds="@{viewModel.appTitleBarrierIds}"
                tools:constraint_referenced_ids="HomeManagerIcon,HomeManagerTitle,HomeManagerButton" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdgeLength="@dimen/l1"
                android:requiresFadingEdge="horizontal"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/HomeManagerTitleBarrier">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/HomeManagerLatestVersion"
                            style="@style/W.Home.Item.Top"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_latest_version" />

                            <TextView
                                style="@style/W.Home.ItemContent.Right"
                                android:text="@{viewModel.managerRemoteVersion}"
                                tools:text="22.0 (22000) (16)" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/HomeManagerInstalledVersion"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/HomeManagerLatestVersion">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_installed_version" />

                            <TextView
                                style="@style/W.Home.ItemContent.Right"
                                android:text="@{viewModel.managerInstalledVersion}"
                                tools:text="22.0 (22000) (16)" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/HomeManagerInternalConnection"
                            style="@style/W.Home.Item.Bottom"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/HomeManagerInstalledVersion">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_package" />

                            <TextView
                                android:id="@+id/HomeManagerExtraConnectionValue"
                                style="@style/W.Home.ItemContent.Right"
                                android:text="@{context.packageName}"
                                tools:text="su.android" />

                        </LinearLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <ProgressBar
                        style="@style/WidgetFoundation.ProgressBar"
                        gone="@{viewModel.stateManagerProgress == 0 || viewModel.stateManagerProgress == 100}"
                        android:layout_width="match_parent"
                        android:layout_gravity="bottom"
                        android:max="100"
                        android:progress="@{viewModel.stateManagerProgress}" />

                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
