<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="su.android.databinding.DataBindingAdaptersKt" />

        <variable
            name="item"
            type="su.android.ui.superuser.PolicyRvItem" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <su.android.material.widgets.Card
            android:id="@+id/policy"
            style="@style/widget_foundation_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="@{item.enabled ? 1f : .5f}"
            android:focusable="true"
            android:nextFocusRight="@id/policy_indicator"
            android:onClick="@{() -> item.toggleExpand()}">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/policy_app_icon"
                        style="@style/widget_foundation_image"
                        srcCompat="@{item.icon}"
                        android:layout_marginStart="@dimen/l1"
                        android:layout_marginTop="@dimen/l1"
                        android:layout_marginBottom="@dimen/l1"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0"
                        tools:srcCompat="@drawable/ic_logo" />

                    <TextView
                        android:id="@+id/policy_app_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/margin_generic"
                        android:layout_marginRight="@dimen/margin_generic"
                        android:ellipsize="middle"
                        android:gravity="start"
                        android:maxLines="2"
                        android:text="@{item.title}"
                        android:textAppearance="@style/appearance_foundation_body"
                        android:textIsSelectable="false"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toStartOf="@+id/policy_indicator"
                        app:layout_constraintStart_toEndOf="@+id/policy_app_icon"
                        app:layout_constraintTop_toTopOf="@+id/policy_app_icon"
                        tools:text="@string/supersu" />

                    <TextView
                        android:id="@+id/policy_package_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/l1"
                        android:ellipsize="middle"
                        android:gravity="start"
                        android:maxLines="2"
                        android:text="@{item.packageName}"
                        android:textAppearance="@style/appearance_foundation_caption_variant"
                        android:textColor="@android:color/tertiary_text_dark"
                        android:textIsSelectable="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/policy_app_name"
                        app:layout_constraintStart_toStartOf="@id/policy_app_name"
                        app:layout_constraintTop_toBottomOf="@id/policy_app_name"
                        app:layout_constraintVertical_bias="0"
                        tools:text="su.android" />

                    <FrameLayout
                        android:id="@+id/policy_indicator"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/l1"
                        android:nextFocusLeft="@id/policy"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <su.android.material.widgets.Switch
                            gone="@{item.showSlider}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="@={item.enabled}" />

                        <com.google.android.material.slider.Slider
                            goneUnless="@{item.showSlider}"
                            labelFormatter="@{item.sliderValueToPolicyString}"
                            android:layout_width="96dp"
                            android:layout_height="wrap_content"
                            android:stepSize="1"
                            android:value="@={DataBindingAdaptersKt.policyToSliderValue(item.sliderValue)}"
                            android:valueFrom="1"
                            android:valueTo="3" />
                    </FrameLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:id="@+id/policy_expand_container"
                    gone="@{!item.isExpanded}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?color_surface_variant"
                    android:orientation="horizontal"
                    tools:visibility="visible">

                    <Button
                        android:id="@+id/policy_notify"
                        style="@style/widget_foundation_button_text"
                        isSelected="@{item.shouldNotify}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="24dp"
                        android:onClick="@{() -> item.toggleNotify()}"
                        android:text="@string/superuser_toggle_notification"
                        android:textAllCaps="false"
                        android:textAppearance="@style/appearance_foundation_tiny"
                        android:textColor="@color/color_state_primary_transient"
                        app:icon="@drawable/ic_notifications"
                        app:iconTint="@color/color_state_primary_transient"
                        app:tint="@color/color_state_primary_transient" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/l_50"
                        android:layout_marginBottom="@dimen/l_50"
                        android:background="?color_surface_surface_variant" />

                    <Button
                        android:id="@+id/policy_log"
                        style="@style/widget_foundation_button_text"
                        isSelected="@{item.shouldLog}"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="24dp"
                        android:onClick="@{() -> item.toggleLog()}"
                        android:text="@string/logs"
                        android:textAllCaps="false"
                        android:textAppearance="@style/appearance_foundation_tiny"
                        android:textColor="@color/color_state_primary_transient"
                        app:icon="@drawable/ic_bug"
                        app:iconTint="@color/color_state_primary_transient"
                        app:tint="@color/color_state_primary_transient" />

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/l_50"
                        android:layout_marginBottom="@dimen/l_50"
                        android:background="?color_surface_surface_variant" />

                    <Button
                        android:id="@+id/policy_delete"
                        style="@style/widget_foundation_button_text"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:minHeight="24dp"
                        android:onClick="@{() -> item.revoke()}"
                        android:text="@string/superuser_toggle_revoke"
                        android:textAllCaps="false"
                        android:textColor="?colorError"
                        android:textSize="12sp"
                        app:icon="@drawable/ic_delete"
                        app:iconTint="?colorError"
                        app:rippleColor="?colorError" />

                </LinearLayout>

            </LinearLayout>

        </su.android.material.widgets.Card>

    </FrameLayout>

</layout>
